# otus_prof_fashion_mnist

./: CMakeLists.txt  README.md  helpers.cpp  helpers.h  logreg_classifier.cpp  logreg_classifier.h  main.cpp
.github/workflows/: release.yml
